--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </form>
         <h1>Anadiendo data from GITHUB<h1>
           <h1>Anadiendo data from GITHUB refreshing knowledge<h1>
+          <h2>adding data from GITHUB <h2>
     
 
 </body> 
